--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="detail_memo_title">Detail Memo</string>
     <string name="btn_modify_memo">수정</string>
     <string name="btn_delete_memo">삭제</string>
+
+    <string name="empty_memo_list_information">저장된 메모가 없습니다</string>
 </resources>
